--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@reduxjs/toolkit": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-pro-sidebar": "^1.1.0-alpha.2"
+    "react-pro-sidebar": "^1.1.0-alpha.2",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
