--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "csv": "^6.3.6",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
+    "export-to-csv": "^1.2.2",
+    "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-datepicker": "^6.0.0",
+    "react-csv": "^2.2.2",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
+    "react-export-table-to-excel": "^1.0.6",
     "react-pro-sidebar": "^1.1.0-alpha.2",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-datepicker": "^4.19.5",
+    "@types/react-csv": "^1.1.10",
+    "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
