--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
+    "@mui/joy": "^5.0.0-beta.28",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
     "csv": "^6.3.6",
