--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/joy": "^5.0.0-beta.28",
-    "@mui/material": "^5.15.6",
+    "@mui/material": "^5.15.11",
+    "@mui/styles": "^5.15.11",
     "@reduxjs/toolkit": "^2.1.0",
     "csv": "^6.3.6",
     "date-fns": "^3.3.1",
