--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,11 +23,14 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "export-to-csv": "^1.2.2",
+    "install": "^0.13.0",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "next": "14.0.4",
+    "npm": "^10.5.0",
     "react": "^18",
     "react-csv": "^2.2.2",
+    "react-data-export": "^0.6.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "react-export-table-to-excel": "^1.0.6",
