--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-export-table-to-excel": "^1.0.6",
     "react-pro-sidebar": "^1.1.0-alpha.2",
     "react-redux": "^9.1.0",
+    "react-to-print": "^2.15.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
