--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.2",
     "react-redux": "^9.1.0",
     "react-to-print": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/react-csv": "^1.1.10",
     "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
